// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`phone full article with style 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "paddingBottom": 25,
            "paddingTop": 35,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "paddingLeft": 10,
              "paddingRight": 10,
            }
          }
        >
          <Image
            style={
              Object {
                "borderRadius": 50,
                "height": 100,
                "marginBottom": 25,
                "overflow": "hidden",
                "width": 100,
              }
            }
          />
          <View
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            <ArticleLabel />
          </View>
          <Text
            style={
              Object {
                "color": "#1D1D1B",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 30,
                "lineHeight": 35,
                "marginBottom": 10,
                "textAlign": "center",
              }
            }
          >
            Some Headline
          </Text>
          <View
            style={
              Object {
                "marginBottom": 15,
                "marginTop": 5,
              }
            }
          >
            <ArticleFlags />
          </View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Regular",
                "fontSize": 20,
                "lineHeight": 25,
                "marginBottom": 15,
                "paddingHorizontal": 10,
                "textAlign": "center",
              }
            }
          >
            Some Standfirst
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <ArticleBylineWithLinks />
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginTop": 15,
                  }
                }
              >
                Friday March 13 2015, 6:54pm, The Times
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#006699",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 17,
            "lineHeight": 26,
            "marginBottom": 25,
            "marginTop": 0,
            "textDecorationLine": "underline",
          }
        }
      >
        Some Link
      </Text>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "fontStyle": "normal",
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View>
      <View>
        <PullQuote>
          The pull quote content
        </PullQuote>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "paddingBottom": 25,
            "width": "100%",
          }
        }
      >
        <Video />
        <View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingTop": 5,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 20,
                }
              }
            >
              This is video caption
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <Ad
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginBottom": 20,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          }
        }
      />
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        <ArticleTopics />
      </View>
    </View>
    <View>
      <View>
        <RelatedArticles />
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`tablet full article with style 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "paddingBottom": 25,
            "paddingTop": 35,
            "width": 660,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "paddingLeft": 10,
              "paddingRight": 10,
              "width": 660,
            }
          }
        >
          <Image
            style={
              Object {
                "borderRadius": 50,
                "height": 100,
                "marginBottom": 25,
                "overflow": "hidden",
                "width": 100,
              }
            }
          />
          <View
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            <ArticleLabel />
          </View>
          <Text
            style={
              Object {
                "color": "#1D1D1B",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 45,
                "lineHeight": 45,
                "marginBottom": 10,
                "textAlign": "center",
              }
            }
          >
            Some Headline
          </Text>
          <View
            style={
              Object {
                "marginBottom": 15,
                "marginTop": 5,
              }
            }
          >
            <ArticleFlags />
          </View>
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Regular",
                "fontSize": 20,
                "lineHeight": 25,
                "marginBottom": 15,
                "paddingHorizontal": 10,
                "textAlign": "center",
              }
            }
          >
            Some Standfirst
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <ArticleBylineWithLinks />
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginTop": 15,
                  }
                }
              >
                Friday March 13 2015, 6:54pm, The Times
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#006699",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 17,
            "lineHeight": 26,
            "marginBottom": 25,
            "marginTop": 0,
            "textDecorationLine": "underline",
          }
        }
      >
        Some Link
      </Text>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "paddingLeft": 10,
            "paddingRight": 10,
            "width": 660,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "fontStyle": "normal",
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "width": 660,
          }
        }
      >
        <PullQuote>
          The pull quote content
        </PullQuote>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "flexDirection": "column",
            "paddingBottom": 25,
            "width": 660,
          }
        }
      >
        <Video />
        <View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingTop": 5,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 20,
                }
              }
            >
              This is video caption
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <Ad
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginBottom": 20,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          }
        }
      />
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginLeft": 10,
            "marginRight": 10,
            "width": 660,
          }
        }
      >
        <ArticleTopics />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "alignSelf": "center",
            "maxWidth": 660,
            "width": "100%",
          }
        }
      >
        <RelatedArticles />
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;
